--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/pinger.c)
-AM_INIT_AUTOMAKE(pinger, 0.32e)
+AM_INIT_AUTOMAKE(pinger, 0.32f-head)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
@@ -57,14 +57,17 @@ AM_INADDRT
 AC_ARG_ENABLE(gtk, [  --enable-gtk            enable GTK+ support],
               [if test "$enableval" = no; then no_gtk=yes; fi])
 AC_MSG_CHECKING([for GTK+ support])
+if test x$no_gtk != xyes; then
+PKG_CHECK_MODULES(GTK, [
+	gtk+-2.0 >= 2.4
+	], no_gtk=nol HAVE_GTK_2=1; AC_DEFINE([HAVE_GTK_2], 1, Found GTK 2), no_gtk=yes)
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+CFLAGS="$CFLAGS $GTK_CFLAGS"
+LIBS="$LIBS $GTK_LIBS"
+fi
 AC_MSG_RESULT($enableval)
 dnl Check for additional external libraries etc..
-if test x$no_gtk != xyes; then
-AM_PATH_GTK_2_0(2.0.0, CFLAGS="$CFLAGS $GTK_CFLAGS"
-					 LIBS="$LIBS $GTK_LIBS"; HAVE_GTK_2=1;
-					 AC_DEFINE([HAVE_GTK_2], 1, Found GTK 2),
-           HAVE_GTK_2=0)
-fi
 AC_CHECK_LIB(ncurses, initscr, HAVE_CURSES=1; LIBS="$LIBS -lncurses";
 	AC_DEFINE([HAVE_LIBNCURSES], [1], found ncurses library))
 AC_CHECK_LIB(intl, libintl_gettext, LIBS="$LIBS -lintl")
