--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/pinger.c)
-AM_INIT_AUTOMAKE(pinger, 0.32f-head)
+AM_INIT_AUTOMAKE(pinger, 0.32f-snapshost-140727)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
