--- a/configure.in
+++ b/configure.in
@@ -60,12 +60,17 @@ AC_ARG_ENABLE([debug], AS_HELP_STRING([--enable-debug], [Build with debugging pr
 dnl GTK3/GTK2 tests
 dnl Note: PKG_CHECK_MODULES cannot be used conditionaly due to sharing the tests and depending on it
 AC_ARG_ENABLE([gtk], AS_HELP_STRING([--enable-gtk[[[=version]]]], [Build with GTK+ interface. Supported versions are gtk2 and gtk3. Default is gtk2.]))
-PKG_CHECK_MODULES(GTK, [ gtk+-2.0 >= 2.4 ], HAVE_GTK_2=1; )
+if test "x$enable_gtk" != "xno"; then
+if test "x$enable_gtk" != "xgtk3"; then
+PKG_CHECK_MODULES(GTK, [ gtk+-2.0 >= 2.4 ], HAVE_GTK_2=1 )
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
-PKG_CHECK_MODULES(GTK3, [ gtk+-3.0 >= 3.10 ], HAVE_GTK_3=1)
+else
+PKG_CHECK_MODULES(GTK3, [ gtk+-3.0 >= 3.10 ], HAVE_GTK_3=1 )
 AC_SUBST(GTK3_CFLAGS)
 AC_SUBST(GTK3_LIBS)
+fi
+fi
 
 if test "x$enableval" = "x" || test "x$enableval" = "xgtk2"; then
 CFLAGS="$CFLAGS $GTK_CFLAGS"
@@ -77,6 +82,8 @@ CFLAGS="$CFLAGS $GTK3_CFLAGS"
 LIBS="$LIBS $GTK3_LIBS"
 HAVE_GTK_2=0
 AC_DEFINE(HAVE_GTK_3, 1, Found GTK+ 3.x support)
+elif test "x$enableval" = "xno"; then
+echo "GTK support disabled by configuration"
 else
 echo "Sorry, the value $enableval is not supported as argument of --enable-gtk. Supported values are gtk2 or gtk3."
 exit 1
